src/styles/App.scss
:root {
    --accent-color: #87c488;
    --primary-color: #aa641e;
    --secondary-color: #8CA6b3;
    --text-color: #FAFAF9;
    --background-color: #284651;
    --danger-color: #ff0000;
}

* {
    font-family: 'Montserrat', sans-serif;
}

#root {
    margin: 0 auto;
    padding: 0;
    text-align: center;
    display: flex;
    flex-direction: column;
    align-items: center;
    min-height: 100vh;
    background-color: var(--secondary-color);
}

html,
body {
    box-sizing: border-box;
}

body {
    background-color: var(--primary-color);
}

// .background {
//     position: fixed;
//     top: 0;
//     left: 0;
//     width: 100%;
//     height: 100%;
//     background-image: url('../assets/bookshelf.jpg');
//     filter: grayscale(88%);
//     background-size: cover;
//     background-repeat: no-repeat;
//     z-index: -1;
//   }

* {
    margin: 0;
}

html,
body {
    height: 100%;
    padding: 0;
}

.container {
    min-height: calc(100vh - 2.5rem);
    padding-bottom: 2.5rem;
    margin: 0 !important;
    padding: 0 !important;
    display: flex;
    flex-direction: column;
    align-items: center;
    background-image: url(../images/mainbg-wide.png);
    background-size: cover;
    background-repeat: no-repeat;
    max-width: unset !important;
}

.navbar {
    display: flex;
    gap: 1.5rem;
    align-items: center;
    text-decoration: none;
    background-color: var(--background-color);
    width: 100%;
    padding-inline: 4rem;

    &.navbar-light {
        padding-inline: 4rem;
    }
}

.nav-link {
    color: var(--text-color);
}

.nav-link.active {
    color: var(--text-color) !important;
}

.custom-toggler .navbar-toggler-icon {
    filter: invert(100%)
}

.navbar-brand {
    text-decoration: none;

    a {
        text-decoration: none;
    }
}

.navbar-brand h1 {
    color: var(--primary-color);
    padding-left: 1rem;
    font-size: 3rem;

    &:hover {
        color: var(--accent-color);
    }
}

.navbar-nav {
    display: flex;
    gap: 1rem;
    font-size: 1.7rem;
}

.navbar-nav a {
    text-decoration: none;
    color: var(--secondary-color);
    opacity: 0.98;
}

.navbar-nav a:hover {
    color: #000;
    background-color: var(--accent-color);
    border-radius: 11px;
}

.navbar-collapse {
    justify-content: flex-end;
}

.footer {

    width: 100%;
    height: fit-content;
    background-color: var(--background-color);
    color: var(--text-color);
    margin-top: auto;
    padding-block: 2rem;
}



.login-container {
    // max-width: 444px;
    width: 999px;
    max-width: 100%;
    display: flex;
    flex-direction: column;
    align-items: center;
    padding: 0.5rem;

    h1 {
        margin-block: 0.5rem;
        color: var(--text-color);
        font-size: 3rem;
    }
}

.login-form-container {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    gap: 1rem;
    max-width: 100%;
    padding: 1rem;
    border: 2px solid var(--accent-color);
    border-radius: 0 22px 0 22px;
    background-color: #FAFAF977;
    margin-inline: 1rem;

    img {
        // min-height: 222px;
        // max-height: 388px;
        max-width: 400px;
        min-width: 211px;
        // max-width: 100%;
        border-radius: 0 22px 0 22px;
        box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
    }

    @media (max-width: 900px) {
        img{
            order: 1;
        }
    }
}

.formContainer {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

form {
    display: flex;
    flex-direction: column;
    justify-content: start;
    font-size: 1.5rem;
    color: var(--text-color);
    gap: .6rem;
    max-width: 400px;
    min-width: 211px;
    border-radius: 11px;
    padding: 4rem 1rem 1rem;
    border-radius: 11px;
    box-shadow: 0 0 6px 0 black;
    background-color: var(--background-color);
    backdrop-filter: blur(6px);
}

.register-page-container {

    h1 {
        color: var(--text-color);
        margin-block: 2rem;
    }
}

.loading-msg {
    color: var(--accent-color);
    font-size: 1.8rem;
    padding: 0.5rem;
    border-radius: 6px;
    margin-top: 1rem;
}

label {
    width: 188px;
}

input {
    font-size: 1.5rem;
}

.form-submit-btn {
    // flex-grow: 0;
    width: 222px;
    // height: 33px;
    font-size: 1.5rem !important;
    margin: 0 auto;
    background-color: var(--accent-color) !important;

    &:hover {
        background-color: var(--primary-color) !important;
    }
}

.formGroup {
    display: flex;
    gap: 1rem;
}

@media (max-width: 991.98px) {
    .navbar-nav {
        margin-left: 1rem;
    }

    .container {
        background-image: url(../images/mainbg-tall.png);
        background-size: cover;
        background-repeat: no-repeat;
    }
}

@media (max-width: 758px) {
    nav.navbar-light {
        padding-inline: 0.4rem;
    }
}

